# pytest-shutil

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
pytest_shutil/: cmdline.py
tests/unit/: test_cmdline.py  test_env.py
